@startuml architecture_overview

class BaseUser {
  id: Long
  name: String
  email: String
}

class Admin {
  phoneNumber: String
}

class Attendee {
  balance: Double
}

class Event {
  id: Long
  name: String
  description: String
  startDate: LocalDate
  endDate: LocalDate
  startTime: LocalTime
  endTime: LocalTime
  email: String
  amountFreeTicketsAvailable: Long
  amountPaidTicketsAvailable: Long
  amountFreeTicketsSold: Long
  amountPaidTicketsSold: Long
  priceTicket: Double
}

class Ticket {
  id: Long
  type: Enum
  date: Instant
  price: Double
}

class Place {
  id: Long
  name: String
  address: String
}

BaseUser        <|--          Admin
BaseUser        <|--          Attendee
   Admin "0..1"   --   "0..*" Event
   Place "0..*"    -   "0..*" Event
   Event          o-   "0..*" Ticket
Attendee          o-   "0..*" Ticket

@enduml
